--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "ejs-loader": "^0.3.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.12.0",
     "less": "^2.6.1",
