--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server -d --content-base dist/ --hot --progress --colors",
-    "build":"webpack -cp"
+    "build": "webpack -cp"
   },
   "author": "didife",
   "license": "ISC",
@@ -13,16 +13,18 @@
     "zepto": "^1.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.3",
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
     "ejs-loader": "^0.3.0",
+    "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.12.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
+    "postcss-loader": "^1.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
